--- a/package.json
+++ b/package.json
@@ -1,4 +1,46 @@
 {
   "private": true,
-  "devDependencies": {}
+  "scripts": {
+    "gulp": "gulp"
+  },
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^2.26.0",
+    "ng-annotate-loader": "^0.2.0",
+    "node-sass": "^4.4.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "angular": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-block-ui": "^0.2.2",
+    "angular-i18n": "^1.6.1",
+    "angular-messages": "^1.6.1",
+    "angular-sanitize": "^1.6.1",
+    "angular-smart-table": "^2.1.8",
+    "angular-translate": "^2.13.1",
+    "angular-ui-bootstrap": "^2.5.0",
+    "angular-ui-notification": "^0.3.5",
+    "angular-ui-router": "^1.0.0-beta.3",
+    "angular-utils-pagination": "^0.11.1",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "imports-loader": "^0.7.0",
+    "ui-select": "^0.19.6"
+  }
 }
