--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "angular-sanitize": "^1.6.1",
     "angular-smart-table": "^2.1.8",
     "angular-translate": "^2.13.1",
-    "angular-ui-bootstrap": "^2.5.0",
+    "angular-ui-bootstrap": "2.3.1",
     "angular-ui-notification": "^0.3.5",
     "angular-ui-router": "^1.0.0-beta.3",
     "angular-utils-pagination": "^0.11.1",
