--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "css-loader": "^0.26.1",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
@@ -39,6 +40,7 @@
     "angular-ui-router": "^1.0.0-beta.3",
     "angular-utils-pagination": "^0.11.1",
     "bootstrap": "^3.3.7",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "imports-loader": "^0.7.0",
     "ui-select": "^0.19.6"
