--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "imports-loader": "^0.7.0",
     "ng-file-upload": "^12.2.13",
+    "plotly.js": "^1.22.0",
     "ui-select": "^0.19.6"
   }
 }
